# transcribeit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Taskfile.yaml  build.rs
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  performance-benchmarks.md  provider-behavior.md  troubleshooting.md
proto/riva/proto/: riva_asr.proto  riva_audio.proto  riva_common.proto
scripts/: check.sh
src/: analysis.rs  cli.rs  input.rs  main.rs  models.rs  pipeline.rs  pipeline_output.rs  setup.rs  transcriber.rs
src/audio/: extract.rs  mod.rs  segment.rs  vad.rs  wav.rs
src/audio/segment/: tests.rs
src/diarize/: ffi.rs  mod.rs
src/engines/: azure_openai.rs  deepgram.rs  gemini.rs  mod.rs  model_cache.rs  nvidia_riva.rs  openai_api.rs  qwen_filetrans.rs  rate_limit.rs  sherpa_onnx.rs  whisper_local.rs
src/engines/deepgram/: tests.rs
src/engines/gemini/: analysis.rs  cached_content.rs  file_cache.rs  files.rs  response.rs  schema.rs  streaming.rs
src/engines/gemini/response/: tests.rs
src/engines/openai_api/: tests.rs
src/engines/qwen_filetrans/: limits.rs  types.rs
src/output/: manifest.rs  mod.rs  srt.rs  vtt.rs
src/pipeline/: tests.rs
src/storage/: s3.rs
