[package]
name = "transcribeit"
version = "1.2.0"
edition = "2024"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[features]
default = ["sherpa-onnx"]

[build-dependencies]
dotenvy = "0.15"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hound = "3.5"
glob = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
regex = "1"
tokio = { version = "1", features = ["full"] }
sherpa-onnx = { version = "0.1", optional = true }
tar = "0.4"
bzip2 = "0.6"
libc = "0.2"
whisper-rs = "0.16"
bytes = "1.11.1"
