[package]
name = "transcribeit"
version = "1.6.0"
edition = "2024"
rust-version = "1.96"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[features]
default = []

[build-dependencies]
dotenvy = "0.15"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hound = "3.5"
glob = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
regex = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
sherpa-onnx = { version = "1.13", default-features = false, features = ["shared"], optional = true }
tar = "0.4"
bzip2 = "0.6"
libc = "0.2"
whisper-rs = "0.16"
bytes = "1.11.1"
aws-config = "1.8.18"
aws-sdk-s3 = "1.135.0"
aws-credential-types = "1.2.14"
uuid = { version = "1.23.3", features = ["v4"] }
tonic = { version = "0.14.6", features = ["tls-webpki-roots"] }
prost = "0.14.4"
tonic-prost = "0.14.6"
